part1/e1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-read-svc
spec:
  type: ClusterIP
  selector:
    app: log-read
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
